# graphrag-playground

./: .env  main.py  pyproject.toml
notebooks/: ch02.ipynb
