[project]
name = "graphrag-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "neo4j>=6.2.0",
    "openai>=2.40.0",
    "pdfplumber>=0.11.9",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
]
